# SirXternal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/hooks/: angle_hook.cpp  angle_hook.h  create_move_hook.cpp  create_move_hook.h  present_hook.cpp  present_hook.h  spread_hook.cpp  spread_hook.h  steam_swapchain.h
src/overlay/: esp.h  headless_renderer.cpp  headless_renderer.h  menu.h  render_object.h  render_object_manager.h
src/sdk/: base_handle.h  game_context.h  matrix.cpp  matrix.h  patterns.h  schema.cpp  schema.h  utl_vector.h  vector.cpp  vector.h
